fix: replace deprecated java.net.URL constructor with URI.create().toURL()
SonarQube S1874: new URL(String) and new URL(String,String,int,String) are
deprecated since Java 20. Replaced both usages in WebhookBanAction with
URI.create(url).toURL() and the URI(scheme,host,port,file,...) constructor
followed by .toURL(), keeping identical runtime behaviour.

Signed-off-by: Florent BOURASSE <fbourasse@jahia.com>